--- a/cfml/app/client/playground/composer/editor.view.less
+++ b/cfml/app/client/playground/composer/editor.view.less
@@ -32,7 +32,7 @@
 			min-height: 14em ; // Roughly two stanzas.
 			overflow-x: auto ;
 			overflow-y: hidden ;
-			white-space: nowrap ;
+			white-space: pre ;
 		}
 
 		&_counts {
